# flutter_kaldi_asr_plugin

./: .gitattributes  .gitmodules
kaldi_asr_ffi/: .gitignore  README.md  pubspec.yaml
kaldi_asr_ffi/android/: CMakeLists.txt  build.gradle  settings.gradle
kaldi_asr_ffi/android/src/main/: AndroidManifest.xml
kaldi_asr_ffi/android/src/main/c/include/base/: version.h
kaldi_asr_ffi/android/src/main/c/src/: fst_utils.cc
kaldi_asr_ffi/android/src/main/c/src/bridge/: asrbridge.cc  asrbridge.h  asrbridge_online.cc  asrbridge_online.hpp
kaldi_asr_ffi/android/src/main/c/src/mmap/: mmap_stream.cpp  mmap_stream.hpp
kaldi_asr_ffi/android/src/main/c/src/server/: server.cc  server.h
kaldi_asr_ffi/android/src/main/kotlin/com/example/kaldi_asr_ffi/: KaldiAsrFfiPlugin.kt
kaldi_asr_ffi/example/: README.md  log  pubspec.yaml
kaldi_asr_ffi/example/android/app/: build.gradle
kaldi_asr_ffi/example/android/app/src/debug/: AndroidManifest.xml
kaldi_asr_ffi/example/android/app/src/main/: AndroidManifest.xml
kaldi_asr_ffi/example/android/app/src/main/kotlin/com/example/flutter_kaldi_asr_example/: MainActivity.kt
kaldi_asr_ffi/example/ios/Runner/: Info.plist
kaldi_asr_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
kaldi_asr_ffi/example/lib/: main.dart
kaldi_asr_ffi/example/test/: widget_test.dart
kaldi_asr_ffi/example/web/: index.html  manifest.json
kaldi_asr_ffi/ios/: kaldi_asr_ffi.podspec
kaldi_asr_ffi/ios/Classes/: KaldiAsrFfiPlugin.h  KaldiAsrFfiPlugin.m  KaldiAsrFfiPlugin.mm  SwiftKaldiAsrFfiPlugin.swift  bindings.h
kaldi_asr_ffi/ios/src/bridge/: asrbridge_online.cc  asrbridge_online.hpp  asrbridge_online_android.cc
kaldi_asr_ffi/ios/src/mmap/: mmap_stream.hpp
kaldi_asr_ffi/ios/src/server/: server.cc  server.hpp
kaldi_asr_ffi/lib/: ffi_flutter_kaldi_asr.dart  online_kaldi_decoder.dart
kaldi_asr_ffi/test/: flutter_kaldi_asr_test.dart
kaldi_asr_platform_interface/: pubspec.yaml
kaldi_asr_platform_interface/lib/: kaldi_asr_platform_interface.dart
